src/components/InfoPanel/InfoPanel.scss
@import "src/styles/variables";
@import "src/styles/mixins";

$border-width: 2px;
$tab-size: 64px;
.info-panel {
  font-family: sans-serif;
  position: fixed;
  color: #aaa;
  transform: translate(-50%, 50%);
  bottom: 50vh;
  left: 50vw;
  width: 300px;
  background: $color-grey-19;
  border: 1px solid #666;
  padding: 10px;
  padding-top: 0;
  overflow-y: auto;
  overflow-x: hidden;
  font-size: 10px;
  ul {
    margin: 0;
    padding: 0 1em;
  }
  &__title {
    margin-bottom: 10px;

    background: #333;
    padding: 3px 5px;
    padding-left: 1em;
    padding-bottom: 4px;
    //background-color: #356330;
    width: 104%;
  }
  &__description {
    padding: 3px 5px;
  }
  &__content {
    min-height: 100px;
    background: $color-grey-19;
    .hud-panel {
      margin-inline: 0px;
      border-color: #555;
    }
    .hud-panel__title {
      position: relative;
      left: -0.4em;
      color: #555;
    }
  }
  &__close-button {
    background: #222;
    color: #666;
    border: 1px solid #666;
    font-size: 10px;
    padding: 2px 5px;
    margin-bottom: 6px;
    position: absolute;
    right: 10px;
    top: -4px;
    border-radius: 3px;
    padding-top: 4px;
    font-weight: bold;
    font-size: 7px;

    &:hover {
      color: #aaa;
      border-color: #eee;
    }
  }
}

